--- a/android-2048-compose/app/build.gradle
+++ b/android-2048-compose/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.alexjlockwood.twentyfortyeightcompose"
+        applicationId "com.abstractconno.twentyfortyeightcompose"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
